--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,193 +4,204 @@
 <meta charset="UTF-8">
 <title>Pizzaria dos manos</title>
 <style>
-:root {
-    --vermelho: #c0392b;
-    --verde: #27ae60;
-    --verde-hover: #219150;
-    --azul: #2980b9;
-    --cinza-bg: #f4f6f8;
-    --cinza-texto: #555;
+:root{
+    --primary:#ff6b35;        /* laranja */
+    --primary-dark:#e63946;   /* vermelho claro */
+    --bg:#fff5f0;
+    --card:#ffffff;
+    --text:#2b2b2b;
+    --muted:#6b7280;
+    --success:#22c55e;
+    --warning:#f59e0b;
+    --danger:#ef4444;
+    --shadow:0 14px 35px rgba(0,0,0,.12);
 }
 
-* {
-    box-sizing: border-box;
+*{
+    box-sizing:border-box;
 }
 
-body {
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background: var(--cinza-bg);
-    margin: 0;
-    color: var(--cinza-texto);
+body{
+    margin:0;
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
+    background:linear-gradient(180deg,#fff7f3,#fff0e8);
+    color:var(--text);
 }
 
 /* HEADER */
-header {
-    background: linear-gradient(135deg, #c0392b, #e74c3c);
-    color: white;
-    padding: 25px;
-    text-align: center;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.15);
+header{
+    background:linear-gradient(135deg,var(--primary),var(--primary-dark));
+    padding:50px 20px;
+    text-align:center;
+    box-shadow:0 20px 45px rgba(0,0,0,.25);
 }
 
-header h1 {
-    margin: 0;
-    font-size: 2rem;
+header h1{
+    margin:0;
+    font-size:2.8rem;
+    font-weight:700;
+    letter-spacing:1px;
 }
 
-/* CONTAINER */
-.container {
-    width: 90%;
-    max-width: 1000px;
-    margin: 25px auto;
+/* CONTAINER (bug corrigido) */
+.container{
+    width:90%;
+    max-width:1100px;
+    margin:40px auto;
 }
 
 /* FORM */
-form {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    margin-bottom: 25px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+form{
+    background:var(--card);
+    padding:30px;
+    border-radius:22px;
+    box-shadow:var(--shadow);
+    margin-bottom:40px;
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+    gap:18px;
 }
 
 form input,
-form select {
-    width: 100%;
-    padding: 10px;
-    margin: 8px 0;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    font-size: 0.95rem;
+form select{
+    padding:14px 16px;
+    border-radius:14px;
+    border:1px solid #e5e7eb;
+    font-size:1rem;
 }
 
 form input:focus,
-form select:focus {
-    outline: none;
-    border-color: var(--vermelho);
+form select:focus{
+    outline:none;
+    border-color:var(--primary);
+    box-shadow:0 0 0 4px rgba(255,107,53,.18);
 }
 
-form button {
-    width: 100%;
-    padding: 12px;
-    margin-top: 10px;
-    border-radius: 6px;
-    font-size: 1rem;
-    font-weight: bold;
+form button{
+    grid-column:1/-1;
+    padding:16px;
+    border-radius:16px;
+    font-size:1.1rem;
+    font-weight:600;
 }
 
 /* BOTÕES */
-button {
-    background: var(--verde);
-    color: white;
-    border: none;
-    cursor: pointer;
-    transition: 0.2s ease;
+button{
+    border:none;
+    cursor:pointer;
+    background:var(--primary);
+    color:white;
+    transition:.25s ease;
 }
 
-button:hover {
-    background: var(--verde-hover);
-    transform: scale(1.02);
+button:hover{
+    background:var(--primary-dark);
+    transform:translateY(-2px);
 }
 
 /* FEEDBACK */
-.loading {
-    color: var(--azul);
-    font-weight: bold;
-    margin-bottom: 10px;
+.loading{
+    font-weight:600;
+    font-size:1.05rem;
+    color:var(--primary-dark);
 }
 
-.erro {
-    color: #e74c3c;
-    margin: 10px 0;
-    font-weight: bold;
+.erro{
+    background:#ffe4e6;
+    color:var(--danger);
+    padding:14px;
+    border-radius:14px;
+    margin-bottom:15px;
+    font-size:1rem;
 }
 
-.sucesso {
-    color: var(--verde);
-    margin: 10px 0;
-    font-weight: bold;
+.sucesso{
+    background:#dcfce7;
+    color:var(--success);
+    padding:14px;
+    border-radius:14px;
+    margin-bottom:15px;
+    font-size:1rem;
 }
 
-/* FILTROS */
-.filtros {
-    margin-bottom: 20px;
+/* FILTRO */
+.filtros{
+    margin-bottom:30px;
 }
 
-.filtros select {
-    padding: 10px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
+.filtros select{
+    padding:14px;
+    border-radius:14px;
+    border:1px solid #e5e7eb;
+    font-size:1rem;
 }
 
-/* CARDS */
-.card {
-    background: white;
-    border-radius: 10px;
-    padding: 18px;
-    margin-bottom: 15px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    transition: 0.2s ease;
+/* LISTA */
+#lista{
+    display:grid;
+    grid-template-columns:repeat(auto-fill,minmax(300px,1fr));
+    gap:24px;
 }
 
-.card:hover {
-    transform: translateY(-3px);
+/* CARD */
+.card{
+    background:var(--card);
+    padding:24px;
+    border-radius:24px;
+    box-shadow:var(--shadow);
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    transition:.25s ease;
 }
 
-.card h3 {
-    margin: 0 0 8px 0;
-    color: var(--vermelho);
+.card:hover{
+    transform:translateY(-6px);
 }
 
-.card p {
-    margin: 4px 0;
+.card h3{
+    margin:0;
+    font-size:1.35rem;
+    font-weight:700;
+    color:var(--primary-dark);
+}
+
+.card p{
+    margin:8px 0;
+    font-size:1rem;
+    color:var(--muted);
 }
 
 /* BOTÕES DO CARD */
-.card button {
-    padding: 8px 12px;
-    border-radius: 6px;
-    font-size: 0.85rem;
-    margin-right: 5px;
-    margin-top: 8px;
+.card button{
+    margin-top:14px;
+    padding:12px;
+    border-radius:14px;
+    font-size:0.95rem;
+    font-weight:500;
 }
 
-.card button:nth-child(1) {
-    background: #3498db;
+.card button:nth-of-type(1){
+    background:#fb923c;
 }
 
-.card button:nth-child(1):hover {
-    background: #2980b9;
+.card button:nth-of-type(2){
+    background:var(--danger);
 }
 
-.card button:nth-child(2) {
-    background: #e74c3c;
-}
-
-.card button:nth-child(2):hover {
-    background: #c0392b;
-}
-
-.card button:nth-child(3) {
-    background: #f39c12;
-}
-
-.card button:nth-child(3):hover {
-    background: #d68910;
+.card button:nth-of-type(3){
+    background:var(--warning);
+    color:#1f2933;
 }
 
 /* RESPONSIVO */
-@media (max-width: 600px) {
-    header h1 {
-        font-size: 1.6rem;
-    }
-
-    .card button {
-        width: 100%;
-        margin-right: 0;
+@media(max-width:600px){
+    header h1{
+        font-size:2.2rem;
     }
 }
 </style>
+
 
 </head>
 
